@@ -1,7 +1,7 @@
 Package: gCMAP
 Type: Package
 Title: Tools for Connectivity Map-like analyses
-Version: 1.11.2
+Version: 1.11.3
 Date: 2014-11-06
 Depends: GSEABase, limma (>= 3.15.14)
 Imports: Biobase, BiocGenerics, methods, GSEAlm, Category, Matrix (>=
