@@ -1,85 +1,98 @@
-importFrom("Matrix","sparseMatrix", "Matrix", "t")
-importFrom("GSEAlm","lmPerGene")
-importFrom("parallel", "mclapply")
-##importClassFrom("bigmemory", "big.matrix")
-##importFrom("bigmemory", "mwhich")
-##importFrom("bigmemoryExtras", "BigMatrix")
-importFrom("genefilter", "rowttests")
+importFrom(
+  "Matrix",
+  "sparseMatrix", 
+  "Matrix",
+  "t")
 
-export("annotate_eset_list",
-       "center_eSet",
-       "eSetOnDisk",
-       "generate_gCMAP_NChannelSet",
-       "eset_instances",
-       "KEGG2cmap",
-       "mapNmerge",
-       "memorize",
-       "mergeCMAPs",
-       "reactome2cmap",
-       "signedRankSumTest",
-       "splitPerturbations",
-       "wiki2cmap",
-       "zScores"
-       )
+importFrom(
+  "GSEAlm",
+  "lmPerGene"
+  )
+
+importFrom(
+  "parallel", 
+  "mclapply")
+
+importFrom(
+  "genefilter", 
+  "rowttests")
+
+export(
+  "annotate_eset_list",
+  "center_eSet",
+  "eSetOnDisk",
+  "generate_gCMAP_NChannelSet",
+  "eset_instances",
+  "go2cmap",
+  "KEGG2cmap",
+  "mapNmerge",
+  "memorize",
+  "mergeCMAPs",
+  "reactome2cmap",
+  "signedRankSumTest",
+  "splitPerturbations",
+  "wiki2cmap",
+  "zScores"
+  )
 
 exportClasses(
-              "SignedGeneSet",
-              "CMAPCollection",
-              "CMAPResults"
-              )
+  "SignedGeneSet",
+  "CMAPCollection",
+  "CMAPResults"
+  )
 
 exportMethods(
-              "camera_score",
-              "CMAPCollection",
-              "cmapTable",
-              "connectivity_score",
-              "downIds",
-              "docs",
-              "docs<-",
-              "effect",
-              "effect<-",
-              "errors",
-              "errors<-",
-              "featureScores",
-              "fisher_score",
-              "gsealm_score",
-              "gsealm_jg_score",
-              "geneIds",
-              "geneIndex",
-              "geneScores",
-              "geneSign",
-              "geneSign<-",
-              "incidence",
-              "induceCMAPCollection",
-              "initialize",
-              "labels",
-              "labels<-",
-              "mapIdentifiers",
-              "mergeCollections",
-              "members",
-	            "mgsa_score",
-              "minSetSize",
-              "plot",
-              "padj",
-              "padj<-",
-              "pval",
-              "pval<-",
-              "mroast_score",
-              "romer_score",
-              "set",
-              "set<-",
-              "setSizes",
-              "show",
-              "signed",
-              "signed<-",
-              "SignedGeneSet",
-              "nFound",
-              "nFound<-",
-              "trend",
-              "trend<-",
-              "upIds",
-              "nSet",
-              "nSet<-",
-              "wilcox_score",
-              "zscores"
-              )
+  "camera_score",
+  "CMAPCollection",
+  "cmapTable",
+  "connectivity_score",
+  "downIds",
+  "docs",
+  "docs<-",
+  "effect",
+  "effect<-",
+  "errors",
+  "errors<-",
+  "featureScores",
+  "fisher_score",
+  "gsealm_score",
+  "gsealm_jg_score",
+  "geneIds",
+  "geneIndex",
+  "geneScores",
+  "geneSign",
+  "geneSign<-",
+  "incidence",
+  "induceCMAPCollection",
+  "initialize",
+  "labels",
+  "labels<-",
+  "mapIdentifiers",
+  "mergeCollections",
+  "members",
+	"mgsa_score",
+  "minSetSize",
+  "plot",
+  "padj",
+  "padj<-",
+  "pval",
+  "pval<-",
+  "mroast_score",
+  "romer_score",
+  "set",
+  "set<-",
+  "setSizes",
+  "show",
+  "signed",
+  "signed<-",
+  "SignedGeneSet",
+  "nFound",
+  "nFound<-",
+  "trend",
+  "trend<-",
+  "upIds",
+  "nSet",
+  "nSet<-",
+  "wilcox_score",
+  "zscores"
+  )
